// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationPage should render WeatherForecastPage with values 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root weather-card css-bhp9pd-MuiPaper-root-MuiCard-root"
  >
    <div
      class="left-block-info"
      data-testid="title"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 title css-2ulfj5-MuiTypography-root"
      >
        CURRENT WEATHER
        <p
          class="location"
        >
          Poland Warsaw
        </p>
      </h6>
      <div
        class="image-info"
      >
        <img
          alt="Rainy"
          src="/images/rainy.png"
        />
      </div>
    </div>
    <div
      class="degrees"
    >
      15 °C
      <p
        class="overall-weather"
      >
         Rainy
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LocationPage should render WeatherForecastPage without opened modal window cloudy weather 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root weather-card css-bhp9pd-MuiPaper-root-MuiCard-root"
  >
    <div
      class="left-block-info"
      data-testid="title"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 title css-2ulfj5-MuiTypography-root"
      >
        CURRENT WEATHER
        <p
          class="location"
        >
          Poland Warsaw
        </p>
      </h6>
      <div
        class="image-info"
      >
        <img
          alt="Cloudy"
          src="/images/cloudy.png"
        />
      </div>
    </div>
    <div
      class="degrees"
    >
      15 °C
      <p
        class="overall-weather"
      >
         Cloudy
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LocationPage should render WeatherForecastPage without opened modal window partly cloudy weather 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root weather-card css-bhp9pd-MuiPaper-root-MuiCard-root"
  >
    <div
      class="left-block-info"
      data-testid="title"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 title css-2ulfj5-MuiTypography-root"
      >
        CURRENT WEATHER
        <p
          class="location"
        >
          Poland Warsaw
        </p>
      </h6>
      <div
        class="image-info"
      >
        <img
          alt="Partly cloudy"
          src="/images/partly-cloudy.png"
        />
      </div>
    </div>
    <div
      class="degrees"
    >
      15 °C
      <p
        class="overall-weather"
      >
         Partly_cloudy
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LocationPage should render WeatherForecastPage without opened modal window rainy weather 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root weather-card css-bhp9pd-MuiPaper-root-MuiCard-root"
  >
    <div
      class="left-block-info"
      data-testid="title"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 title css-2ulfj5-MuiTypography-root"
      >
        CURRENT WEATHER
        <p
          class="location"
        >
          Poland Warsaw
        </p>
      </h6>
      <div
        class="image-info"
      >
        <img
          alt="Rainy"
          src="/images/rainy.png"
        />
      </div>
    </div>
    <div
      class="degrees"
    >
      15 °C
      <p
        class="overall-weather"
      >
         Rainy
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LocationPage should render WeatherForecastPage without opened modal window sunny weather 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root weather-card css-bhp9pd-MuiPaper-root-MuiCard-root"
  >
    <div
      class="left-block-info"
      data-testid="title"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 title css-2ulfj5-MuiTypography-root"
      >
        CURRENT WEATHER
        <p
          class="location"
        >
          Poland Warsaw
        </p>
      </h6>
      <div
        class="image-info"
      >
        <img
          alt="Sunny"
          src="/images/sunny.png"
        />
      </div>
    </div>
    <div
      class="degrees"
    >
      15 °C
      <p
        class="overall-weather"
      >
         Sunny
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LocationPage should render WeatherForecastPage without opened modal window unknown weather 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root weather-card css-bhp9pd-MuiPaper-root-MuiCard-root"
  >
    <div
      class="left-block-info"
      data-testid="title"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 title css-2ulfj5-MuiTypography-root"
      >
        CURRENT WEATHER
        <p
          class="location"
        >
          Poland Warsaw
        </p>
      </h6>
      <div
        class="image-info"
      >
        <img
          alt="Unknown weather"
          src="/images/unknown.png"
        />
      </div>
    </div>
    <div
      class="degrees"
    >
      15 °C
      <p
        class="overall-weather"
      >
         
      </p>
    </div>
  </div>
</DocumentFragment>
`;
